NONRTRIC - dmaap cherry picked from master
14 commits

Issue-ID: NONRTRIC-773

NONRTRIC - dmaap adapter characteristic improvement

Fixed issues with backpressure.

Issue-ID: NONRTRIC-773
C-Id: I5d9a1cb7c741110010e3dd116a5c115061fb59dd

NONRTRIC - dmaap adapter characteristic improvement

Minor changes. Added a testcase.

Issue-ID: NONRTRIC-773
C-Id: Ib45f40763f3124c5e8c32d66e23a7b4a1252e428

NONRTRIC - dmaap adapter characteristic improvement

Minor changes, aesthetics.

Issue-ID: NONRTRIC-773
C-Id: I7dc76691f45d30555be66511e1b78c6e5231d01f

NONRTRIC - dmaap adapter characteristic improvement

Minor changes, renamed some classes.

Issue-ID: NONRTRIC-773
C-Id: I1de5f8d88877b7a8f1693576ac52ca3bf5b5be51

NONRTRIC - dmaap adapter characteristic improvement

Added support for PM filtering of the MO class of the measured object.
Changed the ICS producer ID so that each instance will have a unique ID (using the callback URL).
Changed the Kafka group ID so that each type will have an own group ID
Setting kafka client ID (using the callback URL)

Issue-ID: NONRTRIC-773
C-Id: I1031802469beb146039ed089e4c80f0ca83d4dd9

NONRTRIC - dmaap adapter characteristic improvement

Minor refactoring

Issue-ID: NONRTRIC-773
C-Id: Ibedc361673aad2a9362e31651d11853bd282df85

NONRTRIC - bugfix

If the auth-token-file parameter in the file application.yaml is missing, it would not default to an empty file name.

Issue-ID: NONRTRIC-773
C-Id: Icb357e7a44968df07d42299650700f1003d30abd

NONRTRIC - bugfix

Taking care of incorrect/malformed input to the PM parsing.
Removing "map" output from PM filter that should not be there.

Issue-ID: NONRTRIC-773
C-Id: Ic18d8f7ee3176ea39b91c850bec79ce36582c7ef

NONRTRIC - new certs, updated springboot version

Created new certs
Updated springboot version

Issue-ID: NONRTRIC-773
C-Id: Ie9f798cdb147873fcdc4fd4c9bb911d19abc4e49

NONRTRIC - optimization of PM filtering

If there are many PM job, the PM parsing is done once instead of onced per job.

Issue-ID: NONR
